# python-automation-scripts-collection

./: README.md  dockerfile  pyproject.toml  requirements.txt
src/app/fake_jobs_scraper/: fake_jobs_scraper.py  main.py
src/app/file_management/: tree_generator.py
tests/: test_calculator.py
tests/fake_jobs_scraper/: test_fake_jobs_scraper.py
tests/file_management/: test_tree_generator.py
