[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PythonAutomationScripsCollection"
version = "0.1.0"
description = "A collection of python automation scripts"
authors = [{ name = "Andrea Fiori" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
